<resources>
    <string name="app_name">TimeTrackAdmin</string>
    <string name="app_logo">App Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register New User</string>
    <string name="regfname">First Name</string>
    <string name="reglname">Last Name</string>
    <string name="regemail">Company Email</string>
    <string name="regpass">Password(length>6)</string>
    <string name="submit">Submit</string>
    <string name="title_activity_dumb">DumbActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="update">update</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_manage_account">ManageAccountActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="designation">Designation:</string>
    <string name="tarento_india">Tarento India</string>
    <string name="company">Company:</string>
    <string name="trainee">Trainee</string>
    <string name="location">Location:</string>
</resources>
