<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".view.LoginActivity">
    <androidx.appcompat.widget.Toolbar
    android:id="@+id/login_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

<LinearLayout
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/new_logo"
        android:contentDescription="@string/app_logo"
        android:padding="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"

        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--<com.google.android.material.button.MaterialButton-->
    <!--android:id="@+id/loginButtonId"-->
    <!--style="@style/Theme.MaterialComponents"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="60dp"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:gravity="center"-->
    <!--android:text="@string/login"-->
    <!--android:textSize="24sp"-->
    <!--app:backgroundTint="#0f0"-->
    <!--app:cornerRadius="30dp" />-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButtonId"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/regSubmit"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register" />
</LinearLayout>

</LinearLayout>